--- a/html/projects.html
+++ b/html/projects.html
@@ -35,7 +35,7 @@ and open the template in the editor.
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../html/index.html">Ian Dennis
+                <a class="navbar-brand" href="../index.html">Ian Dennis
                 </a>
               </div>
               <div class="navbar-collapse collapse" >
@@ -74,21 +74,21 @@ and open the template in the editor.
               <h3>Nucor Steel Gallatin New Hire Access PHP Form</h3>
               <div class="row mt centered">
                 <div class="col-sm-6 col-md-6">
-                  <a class="zoom blue" href="../assets/images/portfolio/nhform.png" target="blank"><img class="img-responsive" src="../assets/images/portfolio/newhireform/nhform.png" alt="" height="144" /></a>
+                  <a class="zoom blue" href="../assets/images/portfolio/nhform.PNG" target="blank"><img class="img-responsive" src="../assets/images/portfolio/newhireform/nhform.PNG" alt="" height="144" /></a>
                   <p>New Hire Access Form Home</p>
                 </div>
                 <div class="col-sm-6 col-md-6">
-                  <a class="zoom blue" href="../assets/images/portfolio/nhotcyes.png" target="blank"><img class="img-responsive" src="../assets/images/portfolio/newhireform/nhotcyes.png" alt="" height="144" /></a>
+                  <a class="zoom blue" href="../assets/images/portfolio/nhotcyes.PNG" target="blank"><img class="img-responsive" src="../assets/images/portfolio/newhireform/nhotcyes.PNG" alt="" height="144" /></a>
                   <p>New Hire Access Form Tabs</p>
                 </div>
               </div>
               <div class="row mt centered">
                 <div class="col-sm-6 col-md-6">
-                  <a class="zoom blue" href="../assets/images/portfolio/nhotcb.png" target="blank"><img class="img-responsive" src="../assets/images/portfolio/newhireform/nhotcb.png" alt=""/></a>
+                  <a class="zoom blue" href="../assets/images/portfolio/nhotcb.PNG" target="blank"><img class="img-responsive" src="../assets/images/portfolio/newhireform/nhotcb.PNG" alt=""/></a>
                   <p>Tab Page Access Grants Form</p>
                 </div>
                 <div class="col-sm-6 col-md-6">
-                  <a class="zoom blue" href="../assets/images/portfolio/nhotcit.png" target="blank"><img class="img-responsive" src="../assets/images/portfolio/newhireform/nhotcit.png" alt=""/></a>
+                  <a class="zoom blue" href="../assets/images/portfolio/nhotcit.PNG" target="blank"><img class="img-responsive" src="../assets/images/portfolio/newhireform/nhotcit.PNG" alt=""/></a>
                   <p>Tab Page Access Grants Form</p>
                 </div>
               </div>
