--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ and open the template in the editor.
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="../html/index.html">Ian Dennis
+              <a class="navbar-brand" href="../index.html">Ian Dennis
               </a>
             </div>
             <div class="navbar-collapse collapse" >
