update cases of file extensions

--- a/html/projects.html
+++ b/html/projects.html
@@ -40,7 +40,7 @@ and open the template in the editor.
               </div>
               <div class="navbar-collapse collapse" >
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="../assets/files/IanDennisResume.PDF" target="blank">Resume</a></li>
+                  <li><a href="../assets/files/IanDennisResume.pdf" target="blank">Resume</a></li>
                   <li><a href="../html/projects.html">Projects</a></li>
                   <li><a href="https://www.linkedin.com/in/ianconraddennis" target="blank">LinkedIn</a></li>
                   <li><a href="mailto:dennisic@mail.uc.edu" target="blank">Contact</a></li>
@@ -100,8 +100,8 @@ and open the template in the editor.
                   <p>PHP Login</p>
                 </div>
                 <div class="col-sm-4 col-md-4">
-                  <a class="zoom blue" href="../assets/images/portfolio/secourse/addpatient.png" target="blank"><img class="img-responsive"
-                    src="../assets/images/portfolio/secourse/addpatient.png" alt="" height="144" /></a>
+                  <a class="zoom blue" href="../assets/images/portfolio/secourse/addpatient.PNG" target="blank"><img class="img-responsive"
+                    src="../assets/images/portfolio/secourse/addpatient.PNG" alt="" height="144" /></a>
                   <p>Add New Patient</p>
                 </div>
                 <div class="col-sm-4 col-md-4">
@@ -117,13 +117,13 @@ and open the template in the editor.
                   <p>User Regiseter Page</p>
                 </div>
                 <div class="col-sm-4 col-md-4">
-                  <a class="zoom blue" href="../assets/images/portfolio/secourse/mysqltable.png" target="blank"><img class="img-responsive"
-                    src="../assets/images/portfolio/secourse/mysqltable.png" alt=""/></a>
+                  <a class="zoom blue" href="../assets/images/portfolio/secourse/mysqltable.PNG" target="blank"><img class="img-responsive"
+                    src="../assets/images/portfolio/secourse/mysqltable.PNG" alt=""/></a>
                   <p>User Information mySQL</p>
                 </div>
                 <div class="col-sm-4 col-md-4">
-                  <a class="zoom blue" href="../assets/images/portfolio/secourse/user.png" target="blank"><img class="img-responsive"
-                    src="../assets/images/portfolio/secourse/user.png" alt=""/></a>
+                  <a class="zoom blue" href="../assets/images/portfolio/secourse/user.PNG" target="blank"><img class="img-responsive"
+                    src="../assets/images/portfolio/secourse/user.PNG" alt=""/></a>
                   <p>User Home Page</p>
                 </div>
               </div>
