--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1,5 +1,12 @@
 ﻿
 <!DOCTYPE html>
+<script runat="server">
+
+    Protected Sub Page_Load(sender As Object, e As EventArgs)
+
+    End Sub
+</script>
+
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -907,7 +914,7 @@
                                                                             </td>
                                                                             <td></td>
                                                                             <td class="fc-event-container">
-                                                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
+                                                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
                                                                                     <div class="fc-time mbl"></div>
                                                                                     <span class="fc-title">Chillicothe Post 757 <br />Kickoff Klassic Tourney</span>
                                                                                     <p>
@@ -916,7 +923,7 @@
                                                                                 </a>
                                                                             </td>
                                                                             <td class="fc-event-container">
-                                                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
+                                                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
                                                                                     <div class="fc-time mbl"></div>
                                                                                     <span class="fc-title">Chillicothe Post 757 <br />Kickoff Klassic Tourney</span>
                                                                                     <p>
@@ -966,7 +973,7 @@
                                     <tbody>
                                         <tr>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl"></div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />Kickoff Klassic Tourney</span>
                                                     <p>
@@ -992,14 +999,14 @@
                                                 </a>
                                             </td>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">5:30 pm</div>
                                                     <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">Game 2</div>
                                                     <span class="fc-title">Logan Post 78 <br />at Chillicothe Post 757</span>
                                                     <p>
@@ -1077,14 +1084,14 @@
                                             </td>
                                             <td></td>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">5:30 pm</div>
                                                     <span class="fc-title">Circleville Post 134 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">Game 2</div>
                                                     <span class="fc-title">Circleville Post 134 <br />at Chillicothe Post 757</span>
                                                     <p>
@@ -1094,16 +1101,16 @@
                                             </td>
                                             <td></td>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">5:30 pm</div>
-                                                    Portsmouth Post 23<span class="fc-title"> <br />at Chillicothe Post 757</span>
+                                                    <span class="fc-title">Portsmouth Post 23 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">Game 2</div>
-                                                    Portsmouth Post 23<span class="fc-title"> <br />at Chillicothe Post 757</span>
+                                                    <span class="fc-title">Portsmouth Post 23 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
@@ -1111,16 +1118,16 @@
                                             </td>
                                             <td></td>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">1:00 pm</div>
-                                                    Jackson Post 81<span class="fc-title"> <br />at Chillicothe Post 757</span>
+                                                    <span class="fc-title">Jackson Post 81 <br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">Game 2</div>
-                                                    Jackson Post 81<span class="fc-title"> <br />at Chillicothe Post 757</span>
+                                                    <span class="fc-title">Jackson Post 81 <br />at Chillicothe Post 757</span>
                                                     <p><span class="fc-location mts">Hoffman Field</span></p>
                                                 </a>
                                             </td>
@@ -1175,7 +1182,7 @@
                                             </td>
                                             <td></td>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">5:30 pm</div>
                                                     <span class="fc-title">Lancaster Post 11 <br />at Chillicothe Post 757</span>
                                                     <p>
@@ -1248,14 +1255,14 @@
                                                 </a>
                                             </td>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">5:30 pm</div>
                                                     <span class="fc-title">Greenup County<br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/8Nx4YGBzzpF2" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">Game 2</div>
                                                     <span class="fc-title">Greenup County <br />at Chillicothe Post 757</span>
                                                     <p>
@@ -1368,7 +1375,7 @@
                                                 </a>
                                             </td>
                                             <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
                                                     <div class="fc-time mbl">6:00 pm</div>
                                                     <span class="fc-title">Waverly Post 142 <br />at Chillicothe Post 757</span><p>
                                                         <span class="fc-location mts">Hoffman Field</span>
