--- a/html/schedule.html
+++ b/html/schedule.html
@@ -895,11 +895,11 @@
                                                                             </td>
                                                                             <td></td>
                                                                             <td class="fc-event-container">
-                                                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/51yR3dJyDfK2" target="_blank" data-original-title="" title="">
+                                                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/nCwwX4CrsEP2" target="_blank" data-original-title="" title="">
                                                                                     <div class="fc-time mbl">6:00pm</div>
-                                                                                    <span class="fc-title">Chillicothe Post 757 <br />at Glouster Post ?</span>
+                                                                                    <span class="fc-title">Chillicothe Post 757 <br />at Glouster</span>
                                                                                     <p>
-                                                                                        <span class="fc-location mts">Glouster</span>
+                                                                                        <span class="fc-location mts">Glouster Memorial Park</span>
                                                                                     </p>
                                                                                 </a>
                                                                             </td>
