--- a/html/schedule.html
+++ b/html/schedule.html
@@ -944,6 +944,13 @@
                                                                                         <span class="fc-location mts">Chillicothe, OH</span>
                                                                                     </p>
                                                                                 </a>
+                                                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
+                                                                                    <div class="fc-time mbl">9:00 am</div>
+                                                                                    <span class="fc-title">Chillicothe Post 757 <br />Kickoff Klassic Tourney</span>
+                                                                                    <p>
+                                                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                                                    </p>
+                                                                                </a>
                                                                             </td>
                                                                         </tr>
                                         </tr>
