--- a/html/schedule.html
+++ b/html/schedule.html
@@ -946,7 +946,7 @@
                                                                                 </a>
                                                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
                                                                                     <div class="fc-time mbl">9:00 am</div>
-                                                                                    <span class="fc-title">Chillicothe Post 757 <br />Kickoff Klassic Tourney</span>
+                                                                                    <span class="fc-title">Grove City Post 164 <br>at Chillicothe Post 757</span>
                                                                                     <p>
                                                                                         <span class="fc-location mts">Hoffman Field</span>
                                                                                     </p>
