--- a/html/schedule.html
+++ b/html/schedule.html
@@ -819,7 +819,7 @@
                         </div>
                         <div class="fc-view-container">
                             <div class="fc-view fc-month-view fc-basic-view">
-                                <table>
+                                <table width="1000">
                                     <thead class="fc-head">
                                         <tr>
                                             <td class="fc-widget-header">
