--- a/html/schedule.html
+++ b/html/schedule.html
@@ -896,7 +896,7 @@
                                                                             <td></td>
                                                                             <td class="fc-event-container">
                                                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/nCwwX4CrsEP2" target="_blank" data-original-title="" title="">
-                                                                                    <div class="fc-time mbl">6:00pm</div>
+                                                                                    <div class="fc-time mbl">W 17-3</div>
                                                                                     <span class="fc-title">Chillicothe Post 757 <br />at Glouster</span>
                                                                                     <p>
                                                                                         <span class="fc-location mts">Glouster Memorial Park</span>
@@ -905,7 +905,7 @@
                                                                             </td>
                                                                             <td class="fc-event-container">
                                                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/51yR3dJyDfK2" target="_blank" data-original-title="" title="">
-                                                                                    <div class="fc-time mbl">6:00pm</div>
+                                                                                    <div class="fc-time mbl">W 20-6</div>
                                                                                     <span class="fc-title">Chillicothe Post 757 <br />at Lancaster Post 11</span>
                                                                                     <p>
                                                                                         <span class="fc-location mts">Beavers Field</span>
@@ -920,19 +920,19 @@
                                                                                     <p>
                                                                                         <span class="fc-location mts">Chillicothe, OH</span>
                                                                                     </p>
-                                                                                </a>
+                                                                                </a>                                                                                
                                                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
-                                                                                    <div class="fc-time mbl">12:00 pm</div>
-                                                                                    <span class="fc-title">Jackson Post 81<br />at Chillicothe Post 757 </span>
+                                                                                    <div class="fc-time mbl">W 9-6</div>
+                                                                                    <span class="fc-title">Cambridge Post 84<br />Chillicothe Post 757 </span>
                                                                                     <p>
-                                                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                                                        <span class="fc-location mts">VA Memorial Stadium</span>
                                                                                     </p>
                                                                                 </a>
                                                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
-                                                                                    <div class="fc-time mbl">3:00 pm</div>
-                                                                                    <span class="fc-title">Cambridge<br />at Chillicothe Post 757 </span>
+                                                                                    <div class="fc-time mbl">L 10-4</div>
+                                                                                    <span class="fc-title">Utica Post 92<br />Chillicothe Post 757 </span>
                                                                                     <p>
-                                                                                        <span class="fc-location mts">VA Memorial Stadium</span>
+                                                                                        <span class="fc-location mts">Hoffman Field</span>
                                                                                     </p>
                                                                                 </a>
                                                                             </td>
@@ -945,10 +945,32 @@
                                                                                     </p>
                                                                                 </a>
                                                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
-                                                                                    <div class="fc-time mbl">9:00 am</div>
-                                                                                    <span class="fc-title">Grove City Post 164 <br>at Chillicothe Post 757</span>
+                                                                                    <div class="fc-time mbl">W 13-3</div>
+                                                                                    <span class="fc-title">Grove City Post 164 <br>Chillicothe Post 757</span>
                                                                                     <p>
                                                                                         <span class="fc-location mts">Hoffman Field</span>
+                                                                                    </p>
+                                                                                </a>
+                                                                                
+                                                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
+                                                                                    <div class="fc-time mbl">W 12-5</div>
+                                                                                    <span class="fc-title">Lancaster Post 11 <br>Chillicothe Post 757</span>
+                                                                                    <p>
+                                                                                        <span class="fc-location mts">Ross County Park</span>
+                                                                                    </p>
+                                                                                </a>
+                                                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
+                                                                                    <div class="fc-time mbl">W 6-0</div>
+                                                                                    <span class="fc-title">Cambridge Post 84<br />Chillicothe Post 757 </span>
+                                                                                    <p>
+                                                                                        <span class="fc-location mts">VA Memorial Stadium</span>
+                                                                                    </p>
+                                                                                </a>
+                                                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
+                                                                                    <div class="fc-time mbl">W 6-3</div>
+                                                                                    <span class="fc-title">Portsmouth Post 23<br />Chillicothe Post 757 </span>
+                                                                                    <p>
+                                                                                        <span class="fc-location mts">VA Memorial Stadium</span>
                                                                                     </p>
                                                                                 </a>
                                                                             </td>
@@ -995,12 +1017,19 @@
                                         <tr>
                                             <td class="fc-event-container">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl"></div>
+                                                    <div class="fc-time mbl">Champions</div>
                                                     <span class="fc-title">Chillicothe Post 757 <br />Kickoff Klassic Tourney</span>
                                                     <p>
                                                         <span class="fc-location mts">Chillicothe, OH</span>
                                                     </p>
                                                 </a>
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
+                                                                                    <div class="fc-time mbl">W 7-6</div>
+                                                                                    <span class="fc-title">Utica Post 92<br />Chillicothe Post 757 </span>
+                                                                                    <p>
+                                                                                        <span class="fc-location mts">VA Memorial Stadium</span>
+                                                                                    </p>
+                                                                                </a>
                                             </td>
                                             <td></td>
                                             <td class="fc-event-container">
