--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1023,7 +1023,7 @@
                                                         <span class="fc-location mts">Chillicothe, OH</span>
                                                     </p>
                                                 </a>
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/kickoff-klassic" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://gc.com/game-59349dc1ddbd0412fd000002/recap-story" target="_blank" data-original-title="" title="">
                                                                                     <div class="fc-time mbl">W 7-6</div>
                                                                                     <span class="fc-title">Utica Post 92<br />Chillicothe Post 757 </span>
                                                                                     <p>
